--- a/assets/style.css
+++ b/assets/style.css
@@ -1,1 +1,13 @@
-font-family: Arial, Helvetica, sans-serif;
+
+/* Search area */
+.searchbox {
+    background-color: #e6f2ff;
+    padding: 20px;
+}
+
+#searchbtn{
+    padding: 6px 5px 0px 5px;
+
+}
+
+/* font-family: Arial, Helvetica, sans-serif; */
